# tickit-sync

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
src/: api.rs  config.rs  db.rs  main.rs  models.rs
