[package]
name = "tickit-sync"
version = "0.1.3"
edition = "2024"
authors = ["Ricardo Dantas <ricardo@ricardodantas.me>"]
description = "Self-hosted sync server for Tickit task manager"
license = "MIT"
repository = "https://github.com/ricardodantas/tickit-sync"
homepage = "https://github.com/ricardodantas/tickit-sync"
keywords = ["sync", "server", "tasks", "self-hosted"]
categories = ["command-line-utilities"]

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

# Auth
argon2 = { version = "0.5", features = ["std"] }
rand = "0.9"

# Config
toml = "0.8"
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
